Changed some stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,17 +81,18 @@
         <div class="ui three column center aligned stackable divided grid">
           <div class="column column-feature">
             <div class="ui icon header">
-              <img src="/images/promote.png"><br>
+              <!--img src="/images/promote.png"-->
+              <i class="fa fa-rocket fa-4x"></i><br>
               Promote
             </div>
-            <p style="color: black">Gain contributors to your project or get your issues resolved by promoting them on Openflock</p>
+            <p style="color: black">Gain contributors to your open source project or get your issues resolved by promoting them on Openflock.</p>
             <p>
               
             </p>
           </div>
           <div class="column column-feature">
             <div class="ui icon header">
-              <img src="/images/find.png"><br>
+              <i class="fa fa-search fa-4x"></i><br>
               Find projects
             </div>
             <p style="color: black">Find awesome projects or issues to work on. Also filter your feed according to your favourite language or topic.</p>
@@ -101,7 +102,7 @@
           </div>
           <div class="column column-feature">
             <div class="ui icon header">
-              <img src="/images/sponsor.png"><br>
+              <i class="fa fa-envelope-o fa-4x"></i><br>
               Sponsor
             </div>
             <p style="color: black">Does your opensource project profits people alot? Contact us to get your project sponsored here on Openflock.</p>
@@ -142,20 +143,20 @@
               <div class="ui card" >
     
     <div class="content">
-      <div class="header">My Neighbor Totoro</div>
+      <div class="header"><a href="https://github.com/google/deepdream">Deep Dream</a></div>
       <div class="description">
-        Two sisters move to the country with their father in order to be closer to their hospitalized mother, and discover the surrounding trees are inhabited by magical spirits.
+        Deepdream is a Google-created computer vision program that uses neural networks to interpret images by detecting patterns and amplifying them.
       </div>
     </div>
     <div class="ui two bottom attached buttons">
-      <div class="ui button">
+      <!--div class="ui button">
         <i class="flaticon-plus icon"></i>
         Queue
       </div>
       <div class="ui pink button">
         <i class="flaticon-play icon"></i>
         Watch
-      </div>
+      </div-->
     </div>
   </div>
               
@@ -168,12 +169,13 @@
               <div class="ui card" >
     
     <div class="content">
-      <div class="header">My Neighbor Totoro</div>
+      <div class="header"><a href="https://github.com/mattermost/platform">Matter most</a></div>
       <div class="description">
-        Two sisters move to the country with their father in order to be closer to their hospitalized mother, and discover the surrounding trees are inhabited by magical spirits.
+        Mattermost is an open source, on-prem Slack-alternative.
+It offers modern communication from behind your firewall, including messaging and file sharing across PCs and phones with archiving and instant search.
       </div>
     </div>
-    <div class="ui two bottom attached buttons">
+    <!--div class="ui two bottom attached buttons">
       <div class="ui button">
         <i class="flaticon-plus icon"></i>
         Queue
@@ -182,7 +184,7 @@
         <i class="flaticon-play icon"></i>
         Watch
       </div>
-    </div>
+    </div-->
   </div>
               
           </div>
@@ -193,12 +195,12 @@
               <div class="ui card" >
     
     <div class="content">
-      <div class="header">My Neighbor Totoro</div>
+      <div class="header"><a href="https://github.com/jlevy/the-art-of-command-line">The Art of Command Line</a></div>
       <div class="description">
-        Two sisters move to the country with their father in order to be closer to their hospitalized mother, and discover the surrounding trees are inhabited by magical spirits.
+        This is a selection of notes and tips on using the command-line that we've found useful when working on Linux. Some tips are elementary, and some are fairly specific, sophisticated, or obscure.
       </div>
     </div>
-    <div class="ui two bottom attached buttons">
+    <!--div class="ui two bottom attached buttons">
       <div class="ui button">
         <i class="flaticon-plus icon"></i>
         Queue
@@ -207,7 +209,7 @@
         <i class="flaticon-play icon"></i>
         Watch
       </div>
-    </div>
+    </div-->
   </div>
               
           </div>
@@ -218,12 +220,12 @@
               <div class="ui card" >
     
     <div class="content">
-      <div class="header">My Neighbor Totoro</div>
+      <div class="header"><a href="https://github.com/0xAX/linux-insides">Linux Insides</a></div>
       <div class="description">
-        Two sisters move to the country with their father in order to be closer to their hospitalized mother, and discover the surrounding trees are inhabited by magical spirits.
+       Linux insides is a series of articles written to give you a picture of the inner workings of the Linux kernel.
       </div>
     </div>
-    <div class="ui two bottom attached buttons">
+    <!--div class="ui two bottom attached buttons">
       <div class="ui button">
         <i class="flaticon-plus icon"></i>
         Queue
@@ -232,7 +234,7 @@
         <i class="flaticon-play icon"></i>
         Watch
       </div>
-    </div>
+    </div-->
   </div>
               
           </div>
@@ -242,12 +244,13 @@
               <div class="ui card" >
     
     <div class="content">
-      <div class="header">My Neighbor Totoro</div>
+      <div class="header"><a href="https://github.com/feross/webtorrent">WebTorrent</a></div>
       <div class="description">
-        Two sisters move to the country with their father in order to be closer to their hospitalized mother, and discover the surrounding trees are inhabited by magical spirits.
+        WebTorrent is a streaming torrent client for node.js and the browser. The WebTorrent protocol works just like BitTorrent protocol, except it uses WebRTC.
+
       </div>
     </div>
-    <div class="ui two bottom attached buttons">
+    <!--div class="ui two bottom attached buttons">
       <div class="ui button">
         <i class="flaticon-plus icon"></i>
         Queue
@@ -256,7 +259,7 @@
         <i class="flaticon-play icon"></i>
         Watch
       </div>
-    </div>
+    </div-->
   </div>
               
           </div>
@@ -266,12 +269,13 @@
               <div class="ui card" >
     
     <div class="content">
-      <div class="header">My Neighbor Totoro</div>
+      <div class="header"><a href="https://github.com/FreeCodeCamp/FreeCodeCamp">Free Code Camp</a></div>
       <div class="description">
-        Two sisters move to the country with their father in order to be closer to their hospitalized mother, and discover the surrounding trees are inhabited by magical spirits.
+        Free Code Camp is an open-source community where you learn to code and help nonprofits.
+You start by working through our self-paced, browser-based full stack JavaScript curriculum.
       </div>
     </div>
-    <div class="ui two bottom attached buttons">
+    <!--div class="ui two bottom attached buttons">
       <div class="ui button">
         <i class="flaticon-plus icon"></i>
         Queue
@@ -280,7 +284,7 @@
         <i class="flaticon-play icon"></i>
         Watch
       </div>
-    </div>
+    </div-->
   </div>
               
           </div>
@@ -329,14 +333,14 @@
             
             <div class="ui inverted link list">
               <a class="item" href="https://github.com/waseem18/Openflock#openflock">About</a>
-              <a class="item">Blog</a>
+              <a class="item" href="https://medium.com/@thabraze">Blog</a>
               <a class="item" href="mailto:wasim@thabraze.me" target="_blank">Contact</a>
             </div>
           </div>
           <div class="column">
             
             <div class="ui inverted link list">
-              <a class="item">Contribute</a>
+              <a class="item"href="https://github.com/waseem18/Openflock/blob/master/contribute.txt">Contribute</a>
               <a class="item" href="https://github.com/waseem18/Openflock" target="_blank">GitHub (Source code)</a>
               <a href="mailto:wasim@thabraze.me?Subject=Willing%20to%20sponsor%20a%20project%20on%20Openflock" target="_blank" class="item">Sponsor project</a>
             </div>
@@ -344,8 +348,8 @@
           <div class="column">
             
             <div class="ui inverted link list">
-              <a class="item">Credits</a>
-              <a class="item">License</a>
+              <a class="item" href="https://github.com/waseem18/Openflock/blob/master/credits.txt">Credits</a>
+              <a class="item" href="https://github.com/waseem18/Openflock/blob/master/LICENSE">License</a>
               <a class="item" href="https://gratipay.com/~waseem18/">Donate</a>
             </div>
           </div>
