Made changes to code

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,8 +46,8 @@
     <a class="ui item" href="https://github.com/waseem18/Openflock#openflock">
       About
     </a>
-        <a href="mailto:wasim@thabraze.me?Subject=Willing%20to%20sponsor%20a%20project%20on%20Openflock" target="_blank" class="ui item">
-      Sponsor
+        <a href="http://goo.gl/forms/PagRuhxFA9" target="_blank" class="ui item">
+     Hall of Fame
     </a>
         <a class="ui item" href="https://gratipay.com/~waseem18/">
       Donate
@@ -105,7 +105,7 @@
               <i class="fa fa-envelope-o fa-4x"></i><br>
               Sponsor
             </div>
-            <p style="color: black">Does your opensource project profits people alot? Contact us to get your project sponsored here on Openflock.</p>
+            <p style="color: black">Is your Open source project really useful for the community? Fill in <a href="http://goo.gl/forms/PagRuhxFA9">this form</a> to get your project on Openflock Hall of Fame.</p>
             <p>
               
             </p>
@@ -127,7 +127,7 @@
       <div class="row">
         <div class="eight wide centered column">
           <h1 class="center aligned ui inverted header">
-            Sponsored Projects
+            Openflock Hall of Fame
           </h1>
             <div class="ui horizontal divider"><i class="white flaticon-camera icon"></i></div>
             <p class="ui centered lead">Checkout these projects. You will be amazed!</p>
@@ -315,11 +315,10 @@ You start by working through our self-paced, browser-based full stack JavaScript
   </div-->
   <div class="title">
     <i class="dropdown icon"></i>
-    What are sponsored projects?
+    What is Openflock Hall of Fame?
   </div>
   <div class="content">
-    <p>Sponsored projects are few of the Opensource projects which are profiting people alot.</p>
-    <p>Willing to sponsor your projecy? Contact us about your project details and tell us how your project is creating an impact. We will then publish your project here on Sponsored section.</p>
+  <p>
   </div>
 </div>
    <br><br><br>
@@ -342,7 +341,7 @@ You start by working through our self-paced, browser-based full stack JavaScript
             <div class="ui inverted link list">
               <a class="item"href="https://github.com/waseem18/Openflock/blob/master/contribute.txt">Contribute</a>
               <a class="item" href="https://github.com/waseem18/Openflock" target="_blank">GitHub (Source code)</a>
-              <a href="mailto:wasim@thabraze.me?Subject=Willing%20to%20sponsor%20a%20project%20on%20Openflock" target="_blank" class="item">Sponsor project</a>
+              <a href="http://goo.gl/forms/PagRuhxFA9" target="_blank" class="item">Hall of Fame</a>
             </div>
           </div>
           <div class="column">
