--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
     <a class="ui item" href="https://github.com/waseem18/Openflock#openflock">
       About
     </a>
-        <a href="http://goo.gl/forms/PagRuhxFA9" target="_blank" class="ui item">
+        <a href="http://goo.gl/forms/5jLE4J89gK" target="_blank" class="ui item">
      Hall of Fame
     </a>
         <a class="ui item" href="https://gratipay.com/~waseem18/">
@@ -105,7 +105,7 @@
               <i class="fa fa-envelope-o fa-4x"></i><br>
               Sponsor
             </div>
-            <p style="color: black">Is your Open source project really useful for the community? Fill in <a href="http://goo.gl/forms/PagRuhxFA9">this form</a> to get your project on Openflock Hall of Fame.</p>
+            <p style="color: black">Is your Open source project really useful for the community? Fill in <a href="http://goo.gl/forms/5jLE4J89gK">this form</a> to get your project on Openflock Hall of Fame.</p>
             <p>
               
             </p>
@@ -341,7 +341,7 @@ You start by working through our self-paced, browser-based full stack JavaScript
             <div class="ui inverted link list">
               <a class="item"href="https://github.com/waseem18/Openflock/blob/master/contribute.txt">Contribute</a>
               <a class="item" href="https://github.com/waseem18/Openflock" target="_blank">GitHub (Source code)</a>
-              <a href="http://goo.gl/forms/PagRuhxFA9" target="_blank" class="item">Hall of Fame</a>
+              <a href="http://goo.gl/forms/5jLE4J89gK" target="_blank" class="item">Hall of Fame</a>
             </div>
           </div>
           <div class="column">
