--- a/templates/HallOfFame.html
+++ b/templates/HallOfFame.html
@@ -1,71 +1,132 @@
 <!doctype html>
 <html>
-{% for ud in userdata %}
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js">
-    </script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"> </script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+     <!-- CSS reset -->
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="../dist/semantic.css">
     <link rel="stylesheet" href="../dist/semantic.min.css">
     <link rel="stylesheet" href="/css/stylesidebar.css">
-    <script src="/js/modernizr.js"></script>
-    <script src="../dist/semantic.js"></script>
+    <script src="/js/modernizr.js"></script> 
+        <script src="../dist/semantic.js"></script>
     <script src="../dist/semantic.min.js"></script>
 
-    <title>{{ud.fullname}} | Openflock</title>
+    <title>Hall Of Fame - Openflock</title>
+    <style>
+    input::-webkit-input-placeholder {
+   font-size: 15px;}
+   input::-webkit-textarea-placeholder{
+    font-size: 100%;}
+
+    </style>
+
+    <style>
+   textarea{
+    font-size: 15px;}
+    </style>
+    <script type='text/javascript'>
+CharacterCount = function(TextArea,FieldToCount){
+  var myField = document.getElementById(TextArea);
+  var myLabel = document.getElementById(FieldToCount); 
+  if(!myField || !myLabel){return false}; // catches errors
+  var MaxChars =  myField.maxLength;
+  if(!MaxChars){MaxChars =  myField.getAttribute('maxlength') ; };  if(!MaxChars){return false};
+  var remainingChars =   MaxChars - myField.value.length
+  myLabel.innerHTML = remainingChars+" characters remaining of maximum "+MaxChars
+}
+
+setInterval(function(){CharacterCount('content_txt','message')},55);
+</script>
 </head>
 
 <body>
 
 
-    <header class="cd-main-header" style="z-index: 2000">
-        <a href="/" class="cd-logo"><img src="../images/logo.png" alt="Logo" width="150px" height="35px" style="margin-top: -6px;">
-        </a>
 
-        {% if navfullname %}
+
+<header class="cd-main-header" style="z-index: 2000">
+        <a href="/" class="cd-logo"><img src="../images/logo.png" alt="Logo" width="150px" height="35px" style="margin-top: -6px;"></a>
+        
+        
+		{% for ud in userdata %}
         <a href="#0" class="cd-nav-trigger">Menu<span></span></a>
 
         <nav class="cd-nav">
             <ul class="cd-top-nav">
-
-                <li><a href="/">Home</a>
-                </li>
-                <li><a href="/mypromotedrepos">Activity</a>
-                </li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/mypromotedrepos">Activity</a></li>
                 <li class="has-children account">
                     <a href="#">
-                        <img src="{{avatar_url}}" alt="avatar"> {{navfullname}}
+                        <img src="{{ud.avatar_url}}" alt="avatar">
+                        {{ud.fullname}}
                     </a>
 
                     <ul>
 
-                        <li><a href="http://www.openflock.co/profile/{{navusername}}">My Account</a>
-                        </li>
-                        <li><a href="/auth_redirect">Refresh</a>
-                        </li>
-                        <li><a href="/logout">Logout</a>
-                        </li>
+                        <li><a href="/profile/{{ud.username}}">My Account</a></li>
+                        <li><a href="/auth_redirect">Refresh</a></li>
+                        <li><a href="/logout">Logout</a></li>
                     </ul>
                 </li>
             </ul>
         </nav>
-        {% endif %}
+		{% endfor %}
     </header>
 
     <main class="cd-main-content">
 
         <div class="content-wrapper" style="margin-top: 20px;">
+            
 
+        </div> 
+    </main>
+
+
+
+
+        
+<main class="cd-main-content">
+        <div class="content-wrapper" style="margin-top:-90px; margin-left: -10px;">
+            <div class="ui three stackable cards">
+                {% for rd in data %}
+                <a class="ui card" href="/link/{{rd.uid}}">
+                    <div class="content">
+                        
+                        <div class="header"><span style="color: black">{{rd.reponame}}</span>
+                        </div>
+                        <div class="meta">
+                            <p style="color: #ff7e66; font-size: 14px;">
+                            Python | GUI</p>
+                        </div>
+                        <div class="description">
+                            <p>Here goes the information about the repository and details about how the project is helping the opensource community</p>
+                        </div>
+                    </div>
+                    <div class="extra content">
+                        <div class="left floated author">
+                            Gratipay
+                        </div>
+						<div class="right floated author">
+                            Flattr
+                        </div>
+                    </div>
+                </a>
+                {% endfor %}
+
+            </div>
 
         </div>
     </main>
-    
-    
-    
+
+	<script src="/js/main.js"></script>
+	<script src="/js/jquery.menu-aim.js"></script>
+	<script src="/js/remodal.js"></script>
+
+</body>
+</html>
