--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -87,7 +87,7 @@
              <a class="large ui blue button" style="float: right" href="https://twitter.com/intent/tweet?hashtags=Openflock, Github, Opensource&text=Here's my profile.http://www.openflock.co/profile/{{ud.username}} Start promoting your GitHub repositories on Openflock">Share
              </a>
             {% else %}
-            <a style="float: right" class="large ui blue button" href="https://twitter.com/intent/tweet?hashtags=Openflock, Github, Opensource&text=This profile looks interesting. http://www.openflock.co/profile/{{ud.username}} Start promoting your GitHub repositories on Openflock">Share
+            <a style="float: right" class="large ui blue button" href="https://twitter.com/intent/tweet?hashtags=Openflock, Github, Opensource&text=This profile looks interesting. http://www.openflock.co/profile/{{ud.username}} Start promoting your GitHub repositories on Openflock">Share</a>
                 
 
             {% endif %}
