code made easy to run on localhost

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,7 +2,7 @@
 
 <head>
     {% for ud in userdata %}
-    <title>{{ud.fullname}} - Openflock</title>
+    <title>Openflock</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
@@ -184,7 +184,7 @@
 
                     <ul>
 
-                        <li><a href="http://www.openflock.co/profile/{{ud.username}}">My Account</a>
+                        <li><a href="/profile/{{ud.username}}">My Account</a>
                         </li>
                         <li><a href="/auth_redirect">Refresh</a>
                         </li>
