--- a/templates/promoting.html
+++ b/templates/promoting.html
@@ -9,7 +9,6 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"> </script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
-     <!-- CSS reset -->
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="../dist/semantic.css">
     <link rel="stylesheet" href="../dist/semantic.min.css">
@@ -18,7 +17,7 @@
         <script src="../dist/semantic.js"></script>
     <script src="../dist/semantic.min.js"></script>
 
-    <title>Promoting | Promoting a repository</title>
+    <title>Openflock| Promoting a repository</title>
     <style>
     input::-webkit-input-placeholder {
    font-size: 15px;}
@@ -132,13 +131,6 @@ setInterval(function(){CharacterCount('content_txt','message')},55);
   <input type="hidden" value="{{repo_html_url}}" name="url_entered">
   {% endif %}
   
-<!--a class="github-button" href="https://github.com/ntkme/github-buttons" data-icon="octicon-star" data-style="mega" data-count-href="/ntkme/github-buttons/stargazers" data-count-api="/repos/ntkme/github-buttons#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ntkme/github-buttons on GitHub">Star</a>
-&nbsp;&nbsp;
-
-<a class="github-button" href="https://github.com/ntkme/github-buttons/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/ntkme/github-buttons/network" data-count-api="/repos/ntkme/github-buttons#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ntkme/github-buttons on GitHub">Fork</a>
-&nbsp;&nbsp;
-
-<a class="github-button" href="https://github.com/ntkme/github-buttons" data-icon="octicon-eye" data-style="mega" data-count-href="/ntkme/github-buttons/watchers" data-count-api="/repos/ntkme/github-buttons#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ntkme/github-buttons on GitHub">Watch</a-->
 
 </div>
 
@@ -148,26 +140,26 @@ setInterval(function(){CharacterCount('content_txt','message')},55);
     <label><h2>Reason to promote the repository!</h2></label>
     <div class="field">
       <div class="ui radio checkbox">
-        <input type="radio" name="reason" value="ResolveAnIssue" checked="checked" REQUIRED>
-        <label><p style="font-size: 14px;">ResolveIssue</p></label>
+        <input type="radio" name="reason" value="JustPromoting" checked="checked" REQUIRED>
+        <label><p style="font-size: 14px;">Just Promoting</p></label>
       </div>
     </div>
     <div class="field">
       <div class="ui radio checkbox">
         <input type="radio" name="reason" value="FeatureRequest">
-        <label><p style="font-size: 14px;">FeatureRequest</p></label>
+        <label><p style="font-size: 14px;">Feature Request</p></label>
       </div>
     </div>
     <div class="field">
       <div class="ui radio checkbox">
         <input type="radio" name="reason" value="CodeRefactoring">
-        <label><p style="font-size: 14px;">CodeRefactoring</p></label>
+        <label><p style="font-size: 14px;">Code Refactoring</p></label>
       </div>
     </div>
     <div class="field">
       <div class="ui radio checkbox">
-        <input type="radio" name="reason" value="JustPromoting">
-        <label><p style="font-size: 14px;">JustPromoting</p></label>
+        <input type="radio" name="reason" value="ResolveIssue">
+        <label><p style="font-size: 14px;">Resolve Issue</p></label>
       </div>
     </div>
   </div>
