--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="dist/semantic.css">
     <link rel="stylesheet" href="/css/remodal.css">
     <link rel="stylesheet" href="css/remodal-default-theme.css">
-    <link rel="stylesheet" href="dist/semantic.min.css">
+    <!--link rel="stylesheet" href="dist/semantic.min.css"-->
     <link rel="stylesheet" href="css/stylesidebar.css">
     <script src="/js/modernizr.js"></script>
     <script src="../dist/semantic.js"></script>
-    <script src="../dist/semantic.min.js"></script>
-    <script src="/js/pretty.js" type="text/javascript"></script>
+    <!--script src="../dist/semantic.min.js"></script>
+    <script src="/js/pretty.js" type="text/javascript"></script-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     
     
