Deleted useless code

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,8 +9,8 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="dist/semantic.css">
-    <link rel="stylesheet" href="/css/remodal.css">
-    <link rel="stylesheet" href="css/remodal-default-theme.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.0.5/remodal.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.0.5/remodal-default-theme.css">
     <!--link rel="stylesheet" href="dist/semantic.min.css"-->
     <link rel="stylesheet" href="css/stylesidebar.css">
     <script src="/js/modernizr.js"></script>
@@ -248,7 +248,7 @@
     </main>
     <script src="/js/main.js"></script>
     <script src="/js/jquery.menu-aim.js"></script>
-    <script src="/js/remodal.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.0.5/remodal.js"></script>
     {% endfor %}
 
     
