--- a/templates/promoting.html
+++ b/templates/promoting.html
@@ -221,9 +221,19 @@ setInterval(function(){CharacterCount('content_txt','message')},55);
   <option value="Normal script">Normal script</option>
   <option value="A Product">A Product</option>
   <option value="Machine Learning">Machine Learning</option>
+  <option value="Terminal client">Terminal Client</option>
+  <option value="Servlets">Servlets</option>
+  <option value="Curated list">Curated list</option>
+  <option value="AWS">AWS</option>
+  <option value="Backend">Backend</option>
+  <option value="Frontend">Frontend</option>
+  <option value="Operating Systems">Operating Systems</option>
+  <option value="Compilers">Compilers</option>
+  <option value="API">API</option>
+  <option value="NLP">NLP</option>
+  
 </select>
 <br>
-
 <div class="ui divider"></div>
 <br>
 
