--- a/templates/promoting.html
+++ b/templates/promoting.html
@@ -4,18 +4,11 @@
     {% for ud in userdata %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!--link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'-->
-    <!--script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"> </script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script-->
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="../dist/semantic.css">
-    <!--link rel="stylesheet" href="../dist/semantic.min.css"-->
     <link rel="stylesheet" href="/css/stylesidebar.css">
     <script src="/js/modernizr.js"></script> 
-        <script src="../dist/semantic.js"></script>
-    <!--script src="../dist/semantic.min.js"></script-->
+    <script src="../dist/semantic.js"></script>
 
     <title>Openflock| Promoting a repository</title>
     <style>
@@ -208,7 +201,7 @@ setInterval(function(){CharacterCount('content_txt','message')},55);
 
 <div id="genre">
   <label><h2>Select a genre of the project/issue</h2></label>
-<select name="genre">
+  <select name="genre">
   <option value="0">Select a genre</option> 
   <option value="Appengine">Appengine</option> 
   <option value="Django">Django</option>
@@ -231,8 +224,10 @@ setInterval(function(){CharacterCount('content_txt','message')},55);
   <option value="Compilers">Compilers</option>
   <option value="API">API</option>
   <option value="NLP">NLP</option>
-  
-</select>
+  <option value="Chat">Chat</option>
+  <option value="Database">Database</option>
+  <option value="Community">Community</option>
+  </select>
 <br>
 <div class="ui divider"></div>
 <br>
@@ -248,9 +243,6 @@ setInterval(function(){CharacterCount('content_txt','message')},55);
 <label><h2>How can contributors contact you? (Eg: Gitter link, GitHub Issues link, Slack...)</h2></label>
 <div class="ui form">
   <div class="field">
-    <!--label><h2>How can contributors contact you? (Eg: Gitter link, GitHub Issues link, Slack...)</h2></label>
-    <input type="radio" name="contact_way" value="mail"><span style="font-size: 15px;" REQUIRED>Email</span>&nbsp;&nbsp;
-    <input type="radio" name="contact_way" value="link"><span style="font-size: 15px;">Link</span-->
     <div class="ui large input">
   <input style="font-size: 18px;" type="text" name="contact_link" placeholder="GitHub issues link, Gitter link, Email, Slack link...." REQUIRED>
 </div>
